--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@sendgrid/mail": "^8.1.5",
     "autoprefixer": "^10.4.20",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "latest",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.6.1",
